content/CSST/seed/cosmos/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cosmos-catalog
  labels:
    app: cosmos-catalog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cosmos-catalog
  template:
    metadata:
      labels:
        app: cosmos-catalog
    spec:
      volumes:
        - name: app-state
          persistentVolumeClaim:
            claimName: cosmos-catalog-pvc
      containers:
        - name: web
          image: crpi-wixjy6gci86ms14e.cn-hongkong.personal.cr.aliyuncs.com/ay-dev/cosmos-catalog:20260515015916-97ec46b
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: app-state
              mountPath: /data/state
