content/CSST/seed/cosmos/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cosmos-catalog
  labels:
    app: cosmos-catalog
spec:
  selector:
    app: cosmos-catalog
  ports:
    - name: http
      port: 80
      targetPort: 8080
