content/CSST/seed/cosmos/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cosmos-catalog
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: cosmos.catalog.dev.72602.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cosmos-catalog
                port:
                  number: 80
